--- a/flower-store/assets/scss/index.scss
+++ b/flower-store/assets/scss/index.scss
@@ -27,14 +27,17 @@ body {
     .block_header {
         background-color: #c87e6b;
 
+
         @include tablet() {
-            padding: 15px 0px 10px;
+            padding: 10px 0px 10px;
         }
 
         @include desktop() {
-            padding: 30px 0px 25px;
+            padding: 10px 0px 10px;
         }
     }
+
+   
 
     .navbar-brand {
         margin-right: 0;
@@ -49,7 +52,7 @@ body {
     }
 
     .nav-item {
-        font-size: 16px;
+        font-size: 11.34 px;
         font-family: 'Montserrat', sans-serif;
         color: #e7e4db;
         line-height: 2.048;
@@ -57,12 +60,7 @@ body {
         margin: auto;
         font-weight: bold;
 
-        @include tablet() {
-            font-size: 15px;
-        }
-
         @include desktop() {
-            font-size: 20px;
             margin: 0 25px;
         }
 
@@ -92,6 +90,9 @@ body {
 
 
     // Banner 
+    .block_banner {
+        margin-top: 85px;
+    }
 
     .box_banner {
 
@@ -105,12 +106,13 @@ body {
 
 
     .box_small_banner {
-        padding: 30px 45px 30px;
         position: relative;
         background-image: url("../img/leaf_topbanner.png");
         background-position: top right;
         background-repeat: no-repeat;
         background-size: 15%;
+        padding: 20px;
+
 
         .box_small_text {
             position: relative;
@@ -118,24 +120,24 @@ body {
             .banner_title {
                 font-family: 'Playfair Display', serif;
                 overflow: hidden;
-                font-size: 40px;
+                font-size: 25px;
                 font-weight: bold;
                 color :#484a4b;
 
                 @include tablet() {
-                    font-size: 40px;
+                    font-size: 50px;
                     overflow: unset;
                     
                 }
 
                 @include desktop() {
-                    font-size: 100px;
+                    font-size: 58.33px;
                 }
             }
             
             .small_title {
                 font-family: 'Montserrat Alternates', sans-serif;
-                font-size: 30px;
+                font-size: 18px;
                 overflow: hidden;
                 font-weight: 700;
                 color: #765a33;
@@ -185,7 +187,7 @@ body {
             
             .para_text {
                 font-family: 'Josefin Slab', serif;
-                font-size: 16px;
+                font-size: 14px;
 
                 @include tablet() {
                     font-size: 15px;
@@ -208,9 +210,11 @@ body {
                 border: none;
                 font-weight: 700;
                 text-transform: uppercase;
+                font-size: 8px;
+
 
                 @include desktop() {
-                    font-size: 20px;
+                    font-size: 12.5px;
                 }
             }
             
@@ -219,10 +223,11 @@ body {
                 border: none;
                 background: none;
                 font-weight: 700;
+                font-size: 8px;
                 text-transform: uppercase;
 
                 @include desktop() {
-                    font-size: 20px;
+                    font-size: 12.5px;
                 }
             }
         }     
@@ -236,6 +241,7 @@ body {
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            max-width: 60%;
         }
             
     }
@@ -268,14 +274,14 @@ body {
             font-weight: bold;
             line-height: 0.67;
             color: #ffffff;
-            font-size: 45px;
+            font-size: 35px;
 
             @include tablet() {
-                font-size: 50px;
+                font-size: 40px;
             }
 
             @include desktop() {
-                font-size: 70px;
+                font-size: 48.21 px;
             }
         }
         
@@ -284,11 +290,7 @@ body {
             line-height: 1.256;;
             color: #ffffff;
             font-weight: 600;
-            font-size: 20px;
-
-            @include tablet() {
-                font-size: 16px;
-            }
+            font-size: 16.67 px;
         }
     }
 
@@ -314,11 +316,11 @@ body {
             color: #484a4b;
 
             @include tablet() {
-                font-size: 100px;
+                font-size: 50px;
             }
 
             @include desktop() {
-                font-size: 134px;
+                font-size: 58.33px;
             }
             
         }
@@ -401,7 +403,6 @@ body {
                 color: #484a4b;
                 font-weight: bold;
                 line-height: 0.905;
-                text-align: center;
                 font-size: 30px;
                 overflow: hidden;
                 text-overflow: ellipsis;
@@ -417,7 +418,7 @@ body {
             
             .detail_product_text {
                 font-family: 'Montserrat Alternates', sans-serif;
-                font-size: 12px;
+                font-size: 12.5px;
                 line-height: 1.333;
                 color: #6b502c;
                 overflow: hidden;
@@ -431,14 +432,9 @@ body {
                 border-radius: 25px;
                 padding:4px 16px;
                 color:#e6e3da;
-                font-size: 10px;
+                font-size: 10.1px;
                 white-space: nowrap;
                 text-transform: uppercase;
-
-                @include desktop() {
-                    font-size: 15px;
-                }
-                
             }
         }
     }
@@ -446,39 +442,33 @@ body {
     
     .button_carousel {
         margin-top: 30px; 
-        position: relative;
+        display: flex;
+        justify-content: space-evenly;
 
-        &::before {
-            content: "";
-            background-image: url("../img/leaf_product1.png");
-            position: absolute;
-            background-size: 100%;
-            background-position: left;
-            background-repeat: no-repeat;
-            width: 67px;
-            height: 67px;
-            left: 5%;
+        .pic_cover_btn_product {
+            
+            img {
+                max-width: 100%;
+                max-height: 100%;
+            }
         }
 
-        &::after {
-            content: "";
-            background-image: url("../img/leaf_product.png");
-            position: absolute;
-            background-size: 100%;
-            background-position: right;
-            background-repeat: no-repeat;
-            width: 67px;
-            height: 67px;
-            right: 5%;
-        }
+        .box_button {
+            display: flex;
+            flex-direction: row-reverse;
 
-        .carousel-control-next, .carousel-control-prev {
-            position: relative;
-            display: inline-block ;
-            background-color: #454545;
-            height: 60px;
-            width: 60px;
-            border-radius: 50%;
+            .carousel-control-next, .carousel-control-prev {
+                position: relative;
+                display: inline-block ;
+                width: 46px;
+                height: 46px;
+
+                img {
+                    width:46px;
+                    height: 47px;
+                }
+               
+            }
         }
     }
 
@@ -543,14 +533,14 @@ body {
                 font-weight: bold;
                 line-height: 0.905;
                 color: #484a4b;
-                font-size: 35px;
+                font-size: 20px;
     
                 @include tablet() {
-                    font-size: 100px;
+                    font-size: 24px;
                 }
     
                 @include desktop() {
-                    font-size: 134px;
+                    font-size: 58.33px;
                 }
             }
             
@@ -561,7 +551,7 @@ body {
                 margin-top: 24px;
     
                 @include tablet() {
-                    font-size: 20px;
+                    font-size: 20x;
                 }
     
                 @include desktop() {
@@ -652,11 +642,11 @@ body {
                         border: none;
 
                         @include tablet() {
-                            font-size: 30px;
+                            font-size: 23px;
                         }
 
                         @include desktop() {
-                            font-size: 40px;
+                            font-size: 26.69px;
                         }
                     }
                     
@@ -669,11 +659,11 @@ body {
                         margin-top: 10px;
 
                         @include tablet() {
-                            font-size: 50px;
+                            font-size: 80px;
                         }
 
                         @include desktop() {
-                            font-size: 139px;
+                            font-size: 163.67px;
                         }
                     }
                     
@@ -744,8 +734,6 @@ body {
 
 
     .box_blog {
-        margin-top: 50px;
-
 
         &:nth-child(odd) {
             background-image: url("../img/big_leaf.png");
@@ -755,11 +743,12 @@ body {
             padding-bottom: 30px;
 
             @include tablet() {
-                padding-bottom: 130px;
+                padding-bottom: 250px;
             }
 
             @include desktop() {
-                padding-bottom: 130px;
+                padding-bottom: 370px;
+
             }
 
             .container {
@@ -804,14 +793,14 @@ body {
             background-repeat: no-repeat;
             background-position: bottom left;
             background-size: 10%;
-            padding-bottom: 30px;
+            padding-bottom: 100px;
 
             @include tablet() {
-                padding-bottom: 130px;
+                padding-bottom: 250px;
             }
 
             @include desktop() {
-                padding-bottom: 130px;
+                padding-bottom: 370px;
             }
 
             .container {
@@ -830,6 +819,7 @@ body {
 
 
                     .content_blog {
+
                         @include tablet() {
                             margin-left: 0;
                             margin-right:93px
@@ -911,6 +901,8 @@ body {
         }
 
         .content_blog_title {
+            margin-top:40px;
+
             font-family: 'Playfair Display', serif;
             font-weight: bold;
             line-height: 1.071;
@@ -922,7 +914,7 @@ body {
             }
 
             @include desktop() {
-                font-size: 52px;
+                font-size: 58.33px;
             }
         }
         
@@ -934,11 +926,11 @@ body {
             font-size: 16px;
 
             @include tablet() {
-                font-size: 13px;
+                font-size: 18px;
             }
 
             @include desktop() {
-                font-size: 20px;
+                font-size: 25px;
             }
         }
         
@@ -954,7 +946,7 @@ body {
             text-transform: uppercase;
 
             @include desktop() {
-                font-size: 20px;
+                font-size: 10px;
             }
         }
     }
@@ -965,7 +957,6 @@ body {
     // Subcribe // 
     .block_subscribe {
         padding-bottom: 40px;
-        margin-top: 46px;
     }
 
     .box_sub {
@@ -976,14 +967,14 @@ body {
             font-family: 'Playfair Display', serif;
             font-size: 50px;
             color : #484a4b ;
-            font-size: 24px;
+            font-size: 26px;
 
             @include tablet() {
                 font-size: 50px;
             }
 
             @include desktop() {
-                font-size: 114px;
+                font-size: 58.33px;
             }
         }   
         
@@ -1029,7 +1020,7 @@ body {
             text-transform: uppercase;
 
             @include desktop() {
-                font-size: 30px;
+                font-size: 18.25px;
             }
         }
     }
@@ -1047,6 +1038,7 @@ body {
         margin-top: 20px;
 
         .footer_title {
+            margin-bottom: 30px;
 
             .title_text {
                 font-family: 'Montserrat Alternates', sans-serif;
@@ -1056,7 +1048,7 @@ body {
                 font-size: 24px;
 
                 @include desktop() {
-                    font-size: 40px;
+                    font-size: 37.5px;
                 }
             }
         }
@@ -1065,6 +1057,7 @@ body {
 
             a {
                 text-decoration: none;
+                margin-bottom: 24px;
 
                 .info_footer_text {
                     font-family: 'Montserrat Alternates', sans-serif;
@@ -1072,6 +1065,10 @@ body {
                     color: #ffffff;
                     overflow: hidden;
                     text-overflow: ellipsis;
+
+                    @include desktop() {
+                        font-size: 25px;
+                    }
                 }
             }
         }
