--- a/floral_page/css/floral.css
+++ b/floral_page/css/floral.css
@@ -200,7 +200,7 @@
 }
 .text-contain h3::before{
     position: absolute;
-    left: -5%;
+    left: 0;
     top: 39%;
     content: '';
     width: 10px;
@@ -211,7 +211,7 @@
 .text-contain h3::after{
     position: absolute;
     content: '';
-    right: -5%;
+    right: 0;
     top: 39%;
     width: 10px;
     height: 10px;
@@ -373,18 +373,19 @@
     display: flex;
     justify-content: space-around;
 }
+.container-button-slick{
+    display: flex;
+}
 .slick-prev.slick-arrow{
     top: 115%;
     left: 40%;
 }
 .slick-next.slick-arrow{
-    background: url(/floral_page/img_and_fonts/image/button_next.png);
     width: 50px;
     height: 50px;
     background-repeat:no-repeat;
 }
 .slick-prev.slick-arrow{
-    background: url(/floral_page/img_and_fonts/image/button_previous.png);
     width: 50px;
     height: 50px;
     background-repeat:no-repeat;
@@ -969,6 +970,28 @@
     .text-take-care-detail h2, .text-contain-love-what-we-do h2, .text-contain-love-what-we-do p{
         text-align: center;
     }
+    .slick-next.slick-arrow{
+        background-color: #424242;
+        border-radius: 20px;
+        width: 40px;
+        height: 40px;
+        top: 115%;
+        right: 30%;
+        background-repeat:no-repeat;
+    }
+    .slick-prev.slick-arrow{
+        background-color: #424242;
+        border-radius: 20px;
+        width: 40px;
+        height: 40px;
+        top: 115%;
+        left: 30%;
+        background-repeat:no-repeat;
+    }
+    .fa-solid.fa-chevron-left, .fa-solid.fa-chevron-right{
+        font-size: 15px;
+        color: #fff;
+    }
     .how-we-do-it-content h2{
         font-size: 40px;
     }
@@ -1012,6 +1035,7 @@
     .more-btn{
         display: flex;
         justify-content: center;
+        width: 100%;
     }
     .leaf-image-love-what-we-do{
         width: 100%;
@@ -1144,11 +1168,6 @@
     }
     .leaf-right-bottom-take-care-detail > img{
         width: 10%;
-    }
-    .more-btn{
-        display: flex;
-        justify-content: center;
-        width: 100%;
     }
     .leaf-decor-best-flower-bottom{
         width: 10vw;
